fixed reservation list spacing

--- a/src/targets/sandman/styles/views/reservations.less
+++ b/src/targets/sandman/styles/views/reservations.less
@@ -83,6 +83,12 @@ reservation-hotel-details {
     font-weight: 600;
   }
 
+  reservation-item{
+    margin-bottom: 20px;
+    display: inline-block;
+    width: 100%;
+  }
+
   reservation-data {
 
     .content {
